--- a/index.html
+++ b/index.html
@@ -1,14 +1,64 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>La Jornada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <header>
+        <div class="header-top">
+            <button class="menu-btn">Menú</button>
+            <div class="logo">
+                <h1>La Jornada</h1>
+                <p>miércoles 17 de diciembre de 2025</p>
+            </div>
+            <button class="latest-news-btn">Últimas noticias</button>
+        </div>
+    </header>
+
+    <main>
+        <section class="main-content">
+            <article class="featured-article">
+                <img src="https://via.placeholder.com/600x400" alt="Protesta en Honduras">
+                <h2>Xiomara Castro lidera protesta de izquierda contra "golpe electoral" en Honduras</h2>
+                <p>Seguidores del gobernante Partido Libre se movilizaron en Tegucigalpa en respaldo a la presidenta Xiomara Castro, quien acusó un "golpe electoral" y la manipulación de actas en los comicios presidenciales del 30 de noviembre, cuyo resultado sigue sin definirse, en medio de advertencias del gobierno de Estados Unidos.</p>
+            </article>
+
+            <aside class="sidebar">
+                <article class="side-article">
+                    <img src="https://via.placeholder.com/300x200" alt="María 'N'">
+                    <h3>Ex asesora de García Luna fue detenida; está acusada de presunta operación de recursos ilícitos</h3>
+                    <p>María Vanesa "N" se desempeñó como asesora del ex secretario de Seguridad y fue apoderada legal de la empresa Nunvav, Inc., una de las empresas utilizadas para desviar recursos federales.</p>
+                </article>
+                <article class="side-article">
+                    <img src="https://via.placeholder.com/300x200" alt="Oso polar">
+                    <h3>Investigadores en Canadá observan una rara adopción de un oso polar</h3>
+                    <p>Una hembra salvaje cuidó a una cría que no es suya.</p>
+                </article>
+            </aside>
+        </section>
+
+        <section class="secondary-articles">
+            <article>
+                <h4>Assange denuncia uso del Nobel de la Paz como instrumento de guerra</h4>
+            </article>
+            <article>
+                <h4>Vinculan a proceso a Jacobo Reyes, socio del empresario Raúl Rocha</h4>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <div class="podcast-banner">
+            <img src="https://via.placeholder.com/1200x200" alt="Podcast La Jornada">
+        </div>
+        <div class="anuario">
+            <img src="https://via.placeholder.com/300x200" alt="Anuario La Jornada">
+        </div>
+    </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
